Create bottom menu elements
Move the links to the bottom of the page as a sort of
directory. We just need to align and space correctly but not sure
how to do it with div selectors and classes.

--- a/style.css
+++ b/style.css
@@ -9,27 +9,36 @@
     
 }
 .logo {
-    width: 75px;
-    height: 75px;
+    width: 60px;
+    height: 40px;
     display: block;
-    
+    float: left;
+
 }
 .titles {
     color: white;
-    display: flex;
+    display: inline-block
     
 }
 
 .titles#main {
-    font-weight: 700;
-    text-decoration: underline;
-    font-size: 45px;
-    text-align: right;
+    font-weight: 300;
+    
+    font-size: 30px;
+    float: right;
+    padding-left: 15px;    
+}
+div.bottom-menu{
+    position: absolute;
+    bottom: 0;
+    right: 80px;
     
 }
+div.list  {
+    display:inline-block;
+    align-items: center;
 
-.list  {
-    color: red;
+    
 }
 
 
