--- a/style.css
+++ b/style.css
@@ -58,10 +58,16 @@ footer {
 
 }
 .list  {
-    display: block;
+    display: inline-block;
     margin: 5px;
     padding-left: 300px;
 }
 
+.buttons .socials{
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    
+}
 
 
